# MedicalDocBot

./: .env.example  .gitignore  CHANGELOG.md  README.md  RUN_GUIDE.md  config.yaml  pyproject.toml  requirements.txt  setup-folders.sh  start.bat  start.sh  stop.bat  stop.sh  test_copy.sh  test_rx.py
.agent/scripts/: auto_preview.py  checklist.py
.agent/skills/mobile-design/scripts/: mobile_audit.py
app/: __init__.py  classifier.py  config.py  create_device.py  index_store.py  process_event.py  search.py  slug.py  taxonomy.py  telegram_bot.py  ui.py  utils.py  watcher.py  wiki_generator.py
data/: taxonomy.yaml
docs/: MANUAL_GUIDE.md  OPENCLAW_CUSTOM_MODEL.md  PRD.md  ROADMAP.md  SPECS.md  TELEGRAM_GUIDE.md  USECASES.md  architecture.md  debug_report_v2.7.4.md  naming.md  security.md
scripts/: cleanup_db.py  create_device.sh  full_regen.py  init_db.py  list_gemini_models.py  reset_all.py  run_dev.sh  scan_now.py  seed_samples.sh  setup-folders.sh  setup_taxonomy_folders.sh  test_wiki.py
templates/: device_yaml_template.yaml.j2  model_template.md.j2
tests/: test_classifier.py  test_index_store.py  test_search.py  test_slug.py  test_taxonomy.py  test_v271_fixes.py  test_v272_fixes.py  test_wiki_generator.py
