[project]
name = "medicaldocbot"
version = "2.4.0"
description = "Hệ thống quản lý kho tài liệu thiết bị y tế - 100% local"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Phong", email = "" }]

dependencies = [
    "pyyaml>=6.0.2",
    "watchdog>=4.0.2",
    "jinja2>=3.1.4",
    "aiosqlite>=0.20.0",
    "aiofiles>=23.2.1",
    "python-telegram-bot>=21.9",
    "kreuzberg>=0.5.0",
    "python-dotenv>=1.0.1",
    "unidecode>=1.3.8",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
medicaldocbot-watcher = "app.watcher:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
